[gd_scene load_steps=13 format=2]

[ext_resource path="res://Texture/Sprite/Gingerbread.png" type="Texture" id=1]
[ext_resource path="res://SFX/vibin.ogg" type="AudioStream" id=2]
[ext_resource path="res://Script/Gingerbread.gd" type="Script" id=3]
[ext_resource path="res://Shader/flash_shader.gdshader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Walk",
"speed": 4.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 15 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9, 13 )

[node name="Gingerbread" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 5 )
frames = SubResource( 3 )
animation = "Walk"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Hurt = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="VibeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 4.76837e-07, 4.76837e-07 )
scale = Vector2( 2.4, 2.4 )
physics_process_parent = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -64, 0 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( -1, 3 )
shape = SubResource( 8 )

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
